--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,11 @@
      "target": "es2018",
      "module": "commonjs",
      "moduleResolution": "node",
-     "outDir": "./build",
+     "outDir": "./dist",
+     "declarationDir": "./dist",
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
-     "sourceMap": true
+     "sourceMap": true,
+     "declaration": true
   }
 }
